Stop long links overflowing

--- a/wcivf/assets/scss/_cards.scss
+++ b/wcivf/assets/scss/_cards.scss
@@ -5,6 +5,10 @@
   box-sizing: border-box;
   float: left;
 
+  a {
+    word-wrap: break-word;
+  }
+
   h3 {
     margin-bottom: 5px;
   }
